# react-native-fast-trie

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-fast-trie.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/fasturl/: FastTrieBridge.java  FastTrieModule.java  FastTriePackage.java
cpp/: TrieHostObject.cpp  TrieHostObject.h  fast-trie.cpp  fast-trie.h  utils.h
example/: app.json  babel.config.js  index.js  metro.config.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/FastTrieExample.xcodeproj/: project.pbxproj
example/ios/FastTrieExample.xcworkspace/: contents.xcworkspacedata  contents.xcworkspacedata.xml
example/ios/FastTrieExampleTests/: FastUrlExampleTests.m
example/ios/FastUrlExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard.xml
example/src/: App.tsx  JsTrie.ts  Trie.ts
example/src/benchmarks/: contains.ts  find.ts  insert.ts  utils.ts
example/src/components/: Button.tsx  CorrectResultItem.tsx  IncorrectResultItem.tsx  NavigationButton.tsx  Suite.tsx  TestItem.tsx  Text.tsx
example/src/screens/: Benchmarks.tsx  Home.tsx  params.ts
example/src/testing/: MochaSetup.ts
example/src/wordlists/: allWordlists.ts  wordlist.cz.ts  wordlist.en.ts  wordlist.es.ts  wordlist.fr.ts  wordlist.it.ts  wordlist.jp.ts  wordlist.kr.ts  wordlist.pt.ts  wordlist.zh.cn.ts  (+1 more)
ios/: FastTrie.h  FastTrie.mm
src/: index.tsx
(+25 files in other folders)
